--- a/frontend/src/component/Header/Header.css
+++ b/frontend/src/component/Header/Header.css
@@ -1,10 +1,34 @@
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+}
+
+.backgroundImage {
+    position: relative;
+}
+
 .backgroundImage img{
-    height: 20vh;
+    height: 15vh;
     width: 100vw;
 }
 
-.title{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+}
+
+.title h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: white;
+    margin: 0;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
