--- a/businessWebsite/src/components/header/Header.css
+++ b/businessWebsite/src/components/header/Header.css
@@ -26,41 +26,36 @@
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.75);
 }
 
-.header p{
+.header h3{
     color: white;
+    font-family: 'Oswald';
     margin-left: 10%;
-    margin-top: 25px;
+    line-height: 1;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.75);
-    margin-top: 10px;
 }
 
 
-.NavBar{
-    display: flex;
-    padding-top: 10%;
-    position: relative;
+.NavBar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 10%;
 }
 
-.NavBar .logo{
-    position: absolute;
-    top: 50%;
-    transform: translate(0,-50%);
-    width: 50px; 
-    margin-left: 10%;
+
+.NavBar .logo {
+  width: 50px;
 }
 
-.NavBar-Menu{
-    position: absolute;        
-    top: 50%;                   
-    left: 50%;                 
-    transform: translate(-50%, -50%);
-    display: flex;
-    gap: 1.5rem;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    color: white;
+.NavBar-Menu {
+  display: flex;
+  gap: 1.5rem;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: white;
 }
+
 
 .NavBar li{
     padding: 15px;
@@ -74,6 +69,21 @@
 .NavBar-Menu a {
   color: #fff;          
   text-decoration: none;  
+}
+
+.loginButton {
+  background-color: #49557e;
+  color: white;
+  padding: 0.6rem 1.2rem;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.loginButton:hover {
+  background-color: #3a4566;
 }
 
 
