updated the business website, added login function for the resteraunt owner and admin page such that they add and delete food from menu and see orders

--- a/frontend/src/component/FoodItemDetails/FoodItemDetails.css
+++ b/frontend/src/component/FoodItemDetails/FoodItemDetails.css
@@ -185,4 +185,13 @@
   }
 }
 
+.food-image {
+  max-width: 100%;
+  max-height: 200px;
+  width: auto;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 
